--- a/kie-takari-plugin/pom.xml
+++ b/kie-takari-plugin/pom.xml
@@ -24,9 +24,9 @@
         </configuration>
       </plugin>
       <plugin>
-        <groupId>kie.io.takari.maven.plugins</groupId>
-        <artifactId>kie-takari-lifecycle-plugin</artifactId>
-        <version>1.13.3</version>
+        <groupId>io.takari.maven.plugins</groupId>
+        <artifactId>takari-lifecycle-plugin</artifactId>
+        <version>1.13.5</version>
         <extensions>true</extensions>
         <configuration>
           <proc>none</proc>
